--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Zundamon Sol</title>
+  <title>Zundamon</title>
   <link rel="icon" type="image/png" href="z1.png">
   <style>
     body {
@@ -55,10 +55,10 @@
     <a href="https://t.me/zundamonsol" target="_blank" class="social-button telegram">
       Telegram
     </a>
-    <a href="https://twitter.com/zundamon_sol" target="_blank" class="social-button">
+    <a href="https://twitter.com/zundamonSOL" target="_blank" class="social-button">
     Twitter
     </a>
-    <a href="#" class="social-button another">
+    <a href="https://pump.fun/" class="social-button another">
       Pump.fun
     </a>
   </div>
